rename read_xarray to read_data and reorder data.py

--- a/examples_notebook/Remote_Dask_CGLORS.ipynb
+++ b/examples_notebook/Remote_Dask_CGLORS.ipynb
@@ -143,7 +143,7 @@
     "    sys.path.append('/users_home/oda/tl28319/GIT/Zapata')                       \n",
     "    import zapata.data as zdat\n",
     "    client = get_client()\n",
-    "    thedata = zdat.read_xarray(dataset='C-GLORSv7', var='votemper', period=[2000, 2001], season='JFM', level=[500.])\n",
+    "    thedata = zdat.read_data(dataset='C-GLORSv7', var='votemper', period=[2000, 2001], season='JFM', level=[500.])\n",
     "    return thedata\n",
     "\n",
     "future = client.submit(read_remote)\n",
