Small fix sst notebook

--- a/examples_notebook/compare_models_with_sst.ipynb
+++ b/examples_notebook/compare_models_with_sst.ipynb
@@ -377,10 +377,10 @@
     "bias = model - sst_filtered\n",
     "\n",
     "result['bias'] = bias.mean(dim='time')\n",
-    "result['rmse'] = xr.ufuncs.sqrt((bias ** 2.).mean(dim='time'))\n",
+    "result['rmse'] = np.sqrt((bias ** 2.).mean(dim='time'))\n",
     "\n",
     "result['bias_ts'] = bias.mean(dim=['lat', 'lon'])\n",
-    "result['rmse_ts'] = xr.ufuncs.sqrt((bias ** 2.)).mean(dim=['lat', 'lon'])\n",
+    "result['rmse_ts'] = np.sqrt((bias ** 2.)).mean(dim=['lat', 'lon'])\n",
     "\n",
     "result.to_dataframe()\n"
    ]
